<resources>
    <string name="app_name">StudentDBTest</string>

    <string name="student_id">Student Id</string>
    <string name="student_name">Student Name</string>
    <string name="student_email">Email</string>

    <string name="student_id_hint">student id</string>
    <string name="student_name_hint">student name</string>
    <string name="student_email_hint">email</string>


</resources>
